Bootstrap CSS and Dashboard page changes
Bootstrap CSS and Dashboard page changes

--- a/app/interactive chart.html
+++ b/app/interactive chart.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+  <link rel="stylesheet" href="./css/bootstrap/css/bootstrap.css" >
   <title>
     Google Visualization API Sample
   </title>
@@ -53,5 +54,40 @@ document.write(chart.toJSON());
 </head>
 <body>
    <div id="chart_div" style="width: 900px; height: 500px;"></div>
+<div>
+ <div class="row">
+        <div class="col-md-6">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Medication Name</th>
+                <th>Date</th>
+                <th>UserName</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+</div>
 </body>
 </html>
