--- a/app/interactive chart.html
+++ b/app/interactive chart.html
@@ -48,15 +48,37 @@ var data = new google.visualization.DataTable();
 /* var myView = google.visualization.DataView.fromJSON(data, viewAsJson) */
 var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
 chart.draw(data);
-document.write(chart.toJSON());
+//document.write(chart.toJSON()); 
+drawChart2();
+}
+function drawChart2() {
+
+     var data = google.visualization.arrayToDataTable([
+         ['Date TimeStamp', 'Weight Information ', { role: 'style' }],
+         ['January 2014', 65, '#b87333'],            // RGB value
+         ['May 2014', 60, 'silver'],            // English color name
+         ['July 2014', 61, 'gold'],
+
+       ['August 2014', 55, 'color: #F5e4e2' ], // CSS-style declaration
+      ]);
+ //var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+var chart = new google.visualization.ColumnChart(document.getElementById('chart_div2'));
+chart.draw(data);
 }
   </script>
 </head>
 <body>
-   <div id="chart_div" style="width: 900px; height: 500px;"></div>
-<div>
+
+<div class="row">
+   <div id="chart_div" class="col-xs-12 col-md-8" style="width: 900px; height: 500px;"></div>
+  <div class="col-xs-6 col-md-4">
  <div class="row">
         <div class="col-md-6">
+<br/>
+<br/>
+<br/>
+<br/>
+<div></div>
           <table class="table">
             <thead>
               <tr>
@@ -88,6 +110,12 @@ document.write(chart.toJSON());
             </tbody>
           </table>
         </div>
+</div>
+</div>
+<div class="row">
+<div id="chart_div2" class="col-xs-12 col-md-8" style="width: 900px; height: 500px;"></div>
+  <div class="col-xs-6 col-md-4">
+</div>
 </div>
 </body>
 </html>
