--- a/app/interactive chart.html
+++ b/app/interactive chart.html
@@ -64,6 +64,17 @@ function drawChart2() {
  //var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
 var chart = new google.visualization.ColumnChart(document.getElementById('chart_div2'));
 chart.draw(data);
+drawChart3();
+}
+function drawChart3()
+{
+// Create the three charts: before, after, and diff.
+var chartBefore = new google.visualization.ScatterChart(document.getElementById('chart_div3'));
+//var chartAfter = new google.visualization.ScatterChart(document.getElementById('chart_after_div'));
+//var chartDiff = new google.visualization.ScatterChart(document.getElementById('chart_diff_div'));
+
+// Draw the before and after charts.
+chartBefore.draw(oldData);
 }
   </script>
 </head>
@@ -114,7 +125,28 @@ chart.draw(data);
 </div>
 <div class="row">
 <div id="chart_div2" class="col-xs-12 col-md-8" style="width: 900px; height: 500px;"></div>
-  <div class="col-xs-6 col-md-4">
+  <div class="col-xs-6 col-md-4" id="chart_div3" style="width:400px;"> 
+<br/>
+<br/>
+<br/>
+<br/>
+<table class="table">
+<thead>
+              <tr>
+		<th>#</th>
+                <th>Key Notes</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Went to hackfest recently</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Angerness</td>
+              </tr>
+ </div>
 </div>
 </div>
 </body>
