--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <!-- Latest compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -42,14 +43,19 @@
 
   <!--Main content that changes based on route.-->
   <div ng-view class="container"></div>
-
+  <!-- Lodash -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.compat.min.js"></script>
   <!-- AngularJS -->
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-route.js"></script>
+  <!-- <script src="lib/angular/angular.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
+  <!-- <script src="lib/angular/angular-route.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
+
   <!-- Firebase -->
   <script src="https://cdn.firebase.com/js/client/1.0.15/firebase.js"></script>
   <!-- AngularFire Library -->
-  <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.min.js"></script>
+  <!-- <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.min.js"></script> -->
+  <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
   <!-- FirebaseSimpleLogin -->
   <script src='https://cdn.firebase.com/js/simple-login/1.4.1/firebase-simple-login.js'></script>
   <!-- Custom JavaScript -->
@@ -58,5 +64,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.0/ui-bootstrap.min.js"></script>
 </body>
 </html>
