Dashboard page change
Dashboard html change to get dashboard  into one section.

--- a/app/interactive chart.html
+++ b/app/interactive chart.html
@@ -79,44 +79,43 @@ chartBefore.draw(oldData);
   </script>
 </head>
 <body>
-
+<h1> Patient Information for Jan Garman</h1>
 <div class="row">
-   <div id="chart_div" class="col-xs-12 col-md-8" style="width: 900px; height: 500px;"></div>
+   <div id="chart_div" class="col-xs-12 col-md-8" style="width: 900px; height: 250px;"></div>
   <div class="col-xs-6 col-md-4">
  <div class="row">
         <div class="col-md-6">
-<br/>
-<br/>
+
 <br/>
 <br/>
 <div></div>
           <table class="table">
             <thead>
               <tr>
-                <th>#</th>
+                <th>SNO</th>
                 <th>Medication Name</th>
                 <th>Date</th>
-                <th>UserName</th>
+                <th>Subscribed By</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>Acticin</td>
+                <td>05/06/2014</td>
+                <td>Kim</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+                <td>Nadolol</td>
+                <td>07/07/2014</td>
+                <td>Lisa</td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td>08/28/2014</td>
+                <td>Linda</td>
               </tr>
             </tbody>
           </table>
@@ -124,23 +123,22 @@ chartBefore.draw(oldData);
 </div>
 </div>
 <div class="row">
-<div id="chart_div2" class="col-xs-12 col-md-8" style="width: 900px; height: 500px;"></div>
+<div id="chart_div2" class="col-xs-12 col-md-8" style="width: 900px; height: 300px;"></div>
   <div class="col-xs-6 col-md-4" id="chart_div3" style="width:400px;"> 
-<br/>
-<br/>
+
 <br/>
 <br/>
 <table class="table">
 <thead>
               <tr>
-		<th>#</th>
+		<th>SNO</th>
                 <th>Key Notes</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
-                <td>Went to hackfest recently</td>
+                <td>Went to LeadingAge hackfest this weekend</td>
               </tr>
               <tr>
                 <td>2</td>
